# py-pwsh-session

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci-zizmor.yml  conventional-commit.yml  find-secrets.yml  pr-conflict-checker.yml  pull-request.yml  pypi-release.yml  zizmor.yml
powershell_session/: powershell_session.py
py_powershell/: __init__.py  powershell_session.py
tests/: powershell_session_test.py
