[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0"]

[project]
authors = [
  {name = "Prowler Team", email = "engineering@prowler.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities"
]
dependencies = []
description = "Python package to manage persistent PowerShell sessions, with support for command execution, JSON result parsing, and secure error handling."
keywords = ["powershell", "automation", "windows", "cli", "subprocess"]
license = "Apache-2.0"
maintainers = [
  {name = "Prowler Team", email = "engineering@prowler.com"}
]
name = "py-pwsh-session"
readme = "README.md"
requires-python = ">=3.10,<3.14"
version = "0.1.0"

[project.urls]
"Changelog" = "https://github.com/prowler-cloud/py-pwsh-session/releases"
"Documentation" = "https://docs.prowler.cloud"
"Homepage" = "https://github.com/prowler-cloud/py-pwsh-session"
"Issue tracker" = "https://github.com/prowler-cloud/py-pwsh-session/issues"
"Repository" = "https://github.com/prowler-cloud/py-pwsh-session"

[tool.poetry]
packages = [{include = "py_powershell"}]

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.0"
bandit = "^1.9.4"
black = "^26.3.1"
isort = "^5.13.0"
pre-commit = "^4.5.1"
pylint = "^2.17.0"
pytest = "^7.4.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.0.0"
safety = "^3.0.0"
vulture = "^2.9.0"
